[package]
name = "idavoll_sprite_exporter"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "idavoll-sprite-exporter"
path = "src/main.rs"

[dependencies]
image = "0.25"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { version = "0.8", features = ["preserve_order"] }
anyhow = "1"
